<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/black"
            android:elevation="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cardViewIvUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="1dp"
                        android:layout_marginStart="40dp"
                        app:cardCornerRadius="50dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" >

                        <ImageView
                            android:id="@+id/ivUser"
                            android:layout_width="100dp"
                            android:layout_height="100dp"/>

                    </com.google.android.material.card.MaterialCardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvNameUser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginStart="40dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="20dp"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            tools:text="Nombre" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            >
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="40dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="20dp"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:text="@string/email" />

                            <TextView
                                android:id="@+id/tvCorreo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="40dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="20dp"
                                android:textSize="12sp"
                                tools:text="Nacionality" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            >
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="40dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="20dp"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:text="@string/adrees" />

                            <TextView
                                android:id="@+id/tvAdrees"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="40dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="20dp"
                                android:layout_marginEnd="10dp"
                                android:textSize="12sp"
                                tools:text="Nacionalasdasdasdasdasdasdasdasdity" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            >
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="40dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="20dp"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:text="@string/gender" />

                            <TextView
                                android:id="@+id/tvGenero"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="40dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="20dp"
                                android:textSize="12sp"
                                tools:text="Nacionality" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            >
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="40dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="20dp"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:text="@string/phone" />

                            <TextView
                                android:id="@+id/tvPhone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="40dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="20dp"
                                android:textSize="12sp"
                                tools:text="Nacionality" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            >
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="40dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="20dp"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:text="@string/cell" />

                            <TextView
                                android:id="@+id/tvCell"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="40dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="20dp"
                                android:textSize="12sp"
                                tools:text="Nacionality" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>